...
      style={styles.keyboardAvoider}
    >
      <ScrollView
        contentContainerStyle={styles.container}
        keyboardDismissMode="on-drag"
        keyboardShouldPersistTaps="handled"
        testID="symptoms-scroll"
      >
        <View style={styles.topBar}>
          <Text
            accessibilityRole="header"
            style={styles.title}
            testID="symptoms-title"
...
            }}
            onUpdate={onUpdate}
          />
        ) : !editing ? (
          <Button
            onPress={() => setCreating(true)}
            testID="symptom-add"
            title="Add symptom"
          />
        ) : null}
      </ScrollView>
    </KeyboardAvoidingView>
  );
...
